--- a/assets/scss/3-base/_base.scss
+++ b/assets/scss/3-base/_base.scss
@@ -47,6 +47,7 @@
       line-height: 1.5;
       font-size: 2rem;
       padding: 0.5em 1.5em;
+      margin: 1em;
       text-decoration: none;
       border: 1px solid transparent;
       border-radius: 0.5em;
@@ -56,7 +57,8 @@
         box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.25);
       }
       &:hover {
-        color: black;
+        color: white;
+        background: #000;
       }
   }
 
