better mixins for media queries

--- a/assets/scss/1-variables/_variables.scss
+++ b/assets/scss/1-variables/_variables.scss
@@ -1,8 +1,8 @@
-$font: 'Roboto', sans-serif; 
+$main-font: 'Roboto', sans-serif;
 $primary-bg: hotpink; 
 $secondary-bg: gold;
 $primary-color: #010100;
 
-$desktop-small: 1200px;
+$desktop: 1200px;
 $tablet: 992px; 
 $mobile: 768px; 
