variable and mixing naming corrections

--- a/assets/scss/2-mixins/_tools.scss
+++ b/assets/scss/2-mixins/_tools.scss
@@ -23,12 +23,12 @@ $mixin--baseFontSize: $font-size-base;
 
 // ------------------------------------------
 
-@mixin m-x ($size) {
+@mixin margin-x ($size) {
     margin-right: $size;
     margin-left: $size;
 }
 
-@mixin p-x ($size) {
+@mixin padding-x ($size) {
     padding-right: $size;
     padding-left: $size;
 }
