--- a/assets/scss/1-variables/_variables.scss
+++ b/assets/scss/1-variables/_variables.scss
@@ -3,6 +3,8 @@ $primary-bg: hotpink;
 $secondary-bg: gold;
 $primary-color: #010100;
 
+$max-container-width: 1140px;
+
 $desktop: 1200px;
 $tablet: 992px; 
 $mobile: 768px; 
