useful mixin for max-container-width

--- a/assets/scss/2-mixins/_tools.scss
+++ b/assets/scss/2-mixins/_tools.scss
@@ -23,6 +23,11 @@ $mixin--baseFontSize: $font-size-base;
 
 // ------------------------------------------
 
+@mixin max-container-width {
+    max-width: $max-container-width;
+    margin: 0 auto;
+}
+
 @mixin margin-x ($size) {
     margin-right: $size;
     margin-left: $size;
