--- a/assets/scss/3-base/_base.scss
+++ b/assets/scss/3-base/_base.scss
@@ -1,5 +1,9 @@
   html {
     box-sizing: border-box;
+
+    :focus {
+      outline: 0 !important;
+    }
   }
   *, *:before, *:after {
     box-sizing: inherit;
@@ -12,10 +16,12 @@
   body {
     overflow-x: hidden;
     background-color: $primary-bg;
+    font-family: $font-family;
   }
 
   p, h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1.6rem;
+    font-family: $font-family;
   }
   h1, h2, h3, h4, h5, h6 {
     text-align: center;
@@ -86,8 +92,9 @@
   a {
     font-size: 1.6rem;
     margin-bottom: 1.6rem;
-    color: #0d6efd;
+    color: inherit;
     text-decoration: underline;
+    cursor: pointer;
   }
 
   a:hover {
