--- a/assets/scss/1-variables/_variables.scss
+++ b/assets/scss/1-variables/_variables.scss
@@ -1,7 +1,16 @@
-$main-font: 'Roboto', sans-serif;
+//Typography
+
+$font-family: 'Roboto', sans-serif;
 $primary-bg: hotpink; 
 $secondary-bg: gold;
 $primary-color: #010100;
+
+$regular:   400;
+$medium:    500;
+$semi-bold: 600;
+$bold:      700;
+
+//Responsiveness
 
 $max-container-width: 1140px;
 
@@ -9,3 +18,7 @@ $desktop: 1200px;
 $tablet: 992px; 
 $landscape: 768px;
 $mobile: 576px; 
+
+//Extra
+
+$popup-box-shadow: 2px 0px 25px rgba(#9A9EA6, .6);
