px to rem converter now works from variables

--- a/assets/scss/1-variables/_variables.scss
+++ b/assets/scss/1-variables/_variables.scss
@@ -5,13 +5,14 @@ $primary-bg: hotpink;
 $secondary-bg: gold;
 $primary-color: #010100;
 
-$font-size-base: 16px;
 $h1: rem(36);
 $h2: rem(27);
 $h3: rem(20);
 $h4: rem(16);
-$h5: $font-size-base;
-$h6: $font-size-base;
+$h5: rem(16);
+$h6: rem(16);
+
+$line-height: 1.2;
 
 $regular:   400;
 $medium:    500;
