some corrections to paragraph sizes

--- a/assets/scss/3-base/_base.scss
+++ b/assets/scss/3-base/_base.scss
@@ -30,27 +30,9 @@
     line-height: $line-height;
   } 
   
-  h1 {
-    font-size: 5rem;
-  }
-  h2 {
-    font-size: 4rem;
-  }
-  h3 {
-    font-size: 3rem;
-  }
-  h4 {
-    font-size: 2.5rem;
-  }
-  h5 {
-    font-size: 2rem;
-  }
-  h6 {
-    font-size: 1.8rem;
-  }
   p {
-    font-size: 1.6rem;
-    line-height: 1.5;
+    font-size: $p;
+    line-height: $line-height;
     text-align: center;
   }
 
