updated max-width-container mixin

--- a/assets/scss/1-variables/_variables.scss
+++ b/assets/scss/1-variables/_variables.scss
@@ -23,6 +23,7 @@ $bold:      700;
 //Responsiveness
 
 $max-container-width: 1140px;
+$container-padding-x: 1rem;
 
 $desktop: 1200px;
 $tablet: 992px; 
