--- a/assets/scss/1-variables/_variables.scss
+++ b/assets/scss/1-variables/_variables.scss
@@ -1,10 +1,17 @@
-//Typography
+/*
+    =========
+    Typography
+    =========
+*/
 
 $font-family: 'Roboto', sans-serif;
+//background colors
 $primary-bg: hotpink; 
 $secondary-bg: gold;
-$primary-color: #010100;
-
+//font colors
+$primary-font-color: #010100;
+$secondary-font-color: #fff;
+//headings in pixels, but will be converted to rems
 $h1: rem(36);
 $h2: rem(27);
 $h3: rem(20);
@@ -15,21 +22,28 @@ $p: rem(16);
 
 $line-height: 1.2;
 
+//font weight variables
 $regular:   400;
 $medium:    500;
 $semi-bold: 600;
 $bold:      700;
 
-//Responsiveness
+//Responsive
 
 $max-container-width: 1140px;
 $container-padding-x: 1rem;
 
 $desktop: 1200px;
 $tablet: 992px; 
-$landscape: 768px;
+$phablet: 768px;
 $mobile: 576px; 
+
+//Buttons
+
+$button-font-size: 2rem;
+$button-padding: 0.5em 1.5em;
 
 //Extra
 
 $popup-box-shadow: 2px 0px 25px rgba(#9A9EA6, .6);
+
