added bootstrap-grid and media querie updates

--- a/assets/scss/1-variables/_variables.scss
+++ b/assets/scss/1-variables/_variables.scss
@@ -33,10 +33,21 @@ $bold:      700;
 $max-container-width: 1140px;
 $container-padding-x: 1rem;
 
-$desktop: 1200px;
-$tablet: 992px; 
-$phablet: 768px;
-$mobile: 576px; 
+$mobile-end: 575px; 
+//sm
+$phablet-start: 576px;
+$phablet-end: 767px;
+//md
+$tablet-start: 768px;
+$tablet-end: 991px;
+//lg
+$desktop-start: 992px;
+$desktop-end: 1199px;
+//xl
+$large-desktop-start: 1200px;
+
+
+
 
 //Buttons
 
