--- a/assets/scss/3-base/_base.scss
+++ b/assets/scss/3-base/_base.scss
@@ -18,7 +18,7 @@
   }
 
   p, h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 1.6rem;
+    margin-bottom: $margin-bottom-primary;
     font-family: $font-family;
   }
   h1, h2, h3, h4, h5, h6 {
@@ -32,6 +32,13 @@
     text-align: center;
   }
 
+  button:not(:disabled),
+  [type="button"]:not(:disabled),
+  [type="reset"]:not(:disabled),
+  [type="submit"]:not(:disabled) {
+  cursor: pointer;
+}
+
   button, [type="button"] {
       display: inline-block;
       color: inherit;
@@ -40,9 +47,14 @@
       padding: $button-padding;
       margin: 1em;
       text-decoration: none;
+      text-align: center;
       border: 1px solid transparent;
       border-radius: 0.5em;
       transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
       &:focus {
         outline: 0;
         box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.25);
@@ -51,11 +63,22 @@
         color: white;
         background: #000;
       }
+      &:disabled {
+        opacity: 0.65;
+      }
+      @media (prefers-reduced-motion: reduce) {
+        .btn {
+          transition: none;
+        }
+      }
   }
+
+
 
 
   hr {
     margin: 1.6rem 0;
+    border: 0;
   }
   
 
@@ -91,9 +114,11 @@
     line-height: inherit;
   }
 
-  button:not(:disabled),
-  [type="button"]:not(:disabled),
-  [type="reset"]:not(:disabled),
-  [type="submit"]:not(:disabled) {
-  cursor: pointer;
-}
+  @media print {
+    *,
+    *::before,
+    *::after {
+      text-shadow: none !important;
+      box-shadow: none !important;
+    }
+  }
