--- a/assets/scss/2-mixins/_mediaqueries.scss
+++ b/assets/scss/2-mixins/_mediaqueries.scss
@@ -61,6 +61,12 @@
     }
 }
 
+@mixin large-desktop-up {
+    @media (min-width: #{$large-desktop-start}) {
+        @content;
+    }
+}
+
 //from whatever size you choose
 
 @mixin min-width ($size) {
