--- a/assets/scss/2-mixins/_tools.scss
+++ b/assets/scss/2-mixins/_tools.scss
@@ -1,9 +1,27 @@
 //CONTAINER SIZE , MARGINS AND PADDING
 
-@mixin max-container-width {
-    max-width: $max-container-width;
+@mixin container {
+    width: 100%;
     @include margin-x (auto);
-    @include padding-x ($container-padding-x);
+    @include padding-x (15px);
+    @include phablet-up {
+        max-width: 540px;
+    }
+    @include tablet-up {
+        max-width: 720px;
+    }
+    @include desktop-up {
+        max-width: 960px;
+    }
+    @include large-desktop-up {
+        max-width: 1140px;
+    }
+}
+
+@mixin container-fluid {
+    width: 100%;
+    @include margin-x (auto);
+    @include padding-x (15px);
 }
 
 @mixin margin-x ($size) {
@@ -29,9 +47,9 @@
     padding-left: $size;
 }
 
-@mixin padding-y ($top, $bottom) {
-    padding-top: $top;
-    padding-bottom: $bottom;
+@mixin padding-y ($size) {
+    padding-top: $size;
+    padding-bottom: $size;
 }
 
 //MIXINS FOR FLEXBOX
@@ -123,12 +141,12 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    // justify-content: space-between;
     flex-direction: row;
     margin-bottom: 0;
     list-style: none;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    @include padding-y (.5rem);
+    @include padding-x (1rem);
     text-decoration: none;
 }
 
