--- a/assets/scss/3-base/_base.scss
+++ b/assets/scss/3-base/_base.scss
@@ -1,7 +1,10 @@
   html {
     box-sizing: border-box;
+    font-family: sans-serif;
     min-height: 100%;
     width: 100%;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
   *, *:before, *:after {
     box-sizing: inherit;
@@ -14,21 +17,22 @@
   body {
     overflow-x: hidden;
     background-color: $primary-bg;
+    color: $primary-font-color;
     font-family: $font-family;
+    font-weight: $regular;
+    line-height: $line-height;
   }
 
   p, h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
     margin-bottom: $margin-bottom-primary;
-    font-family: $font-family;
   }
   h1, h2, h3, h4, h5, h6 {
     text-align: center;
-    line-height: $line-height;
   } 
   
   p {
     font-size: $p;
-    line-height: $line-height;
     text-align: center;
   }
 
@@ -42,10 +46,11 @@
   button, [type="button"] {
       display: inline-block;
       color: inherit;
+      background-color: $button-color;
       line-height: 1.5;
       font-size: $button-font-size;
       padding: $button-padding;
-      margin: 1em;
+      margin: $button-margin;
       text-decoration: none;
       text-align: center;
       border: 1px solid transparent;
@@ -67,9 +72,9 @@
         opacity: 0.65;
       }
       @media (prefers-reduced-motion: reduce) {
-        .btn {
+        
           transition: none;
-        }
+        
       }
   }
 
@@ -77,6 +82,9 @@
 
 
   hr {
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible;
     margin: 1.6rem 0;
     border: 0;
   }
@@ -96,16 +104,16 @@
     font-size: 1.6rem;
     margin-bottom: 1.6rem;
     color: inherit;
-    text-decoration: underline;
+    text-decoration: none;
     cursor: pointer;
-  }
-
-  a:hover {
-    color: #024dbc;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   img {
     vertical-align: middle;
+    border-style: none;
   }
 
   input, select {
