added aspect-ratio-box variables and mixins

--- a/assets/scss/1-variables/_variables.scss
+++ b/assets/scss/1-variables/_variables.scss
@@ -70,6 +70,8 @@ $margin-bottom-secondary: 1.2rem;
 $margin-bottom-tertiary: 1rem;
 
 //Extra
-
 $popup-box-shadow: 2px 0px 25px rgba(#9A9EA6, .6);
+$aspect-ratio-box-height: 315px;
+$aspect-ratio-box-width: 560px;
+$aspect-ratio-box-text: 5vw;
 
