--- a/assets/scss/2-mixins/_tools.scss
+++ b/assets/scss/2-mixins/_tools.scss
@@ -129,6 +129,48 @@
     background-repeat: no-repeat;
 }
 
+/*
+    =========
+    Aspect Ratio Boxes
+    =========
+*/
+
+//Aspect Ratio Box v1  
+
+@mixin aspect-ratio-box {
+    height: 0;
+    padding-top: $aspect-ratio-box-height / $aspect-ratio-box-width * 100%;
+}
+
+//Aspect Ratio Box v2
+//putting content inside an aspect ratio box
+//Elements should be nested in this order. 
+
+@mixin aspect-ratio-box-container {
+    height: 0;
+    overflow: hidden;
+    padding-top: $aspect-ratio-box-height / $aspect-ratio-box-width * 100%;
+    background: $primary-bg;
+    position: relative;
+}
+
+@mixin aspect-ratio-box-container-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@mixin aspect-ratio-box-container-inner-flex {
+    height: 100%;
+    @include flex-center;
+}
+
+@mixin aspect-ratio-box-text {
+    font-size: $aspect-ratio-box-text; 
+}
+
 //OTHER MIXINS
 
 @mixin absolute-position {
@@ -154,6 +196,15 @@
     text-transform: uppercase;
 }
 
-
-
-
+//only display content to screen readers
+@mixin visually-hidden {
+    position: absolute !important;
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+  }
