margin, padding, line-height variables and styles

--- a/assets/scss/1-variables/_variables.scss
+++ b/assets/scss/1-variables/_variables.scss
@@ -20,7 +20,7 @@ $h5: rem(16);
 $h6: rem(16);
 $p: rem(16);
 
-$line-height: 1.5;
+$primary-line-height: 1.5;
 
 //font weight variables
 $regular:   400;
@@ -68,6 +68,10 @@ $button-margin: 0;
 $margin-bottom-primary: 1.6rem; //used in base as default for paragraphs and all headings
 $margin-bottom-secondary: 1.2rem;
 $margin-bottom-tertiary: 1rem;
+
+$margin-top-primary: $margin-bottom-primary;
+$margin-top-secondary: $margin-bottom-secondary;
+$margin-top-tertiary: $margin-bottom-tertiary;
 
 //Extra
 $popup-box-shadow: 2px 0px 25px rgba(#9A9EA6, .6);
