--- a/assets/scss/3-base/_base.scss
+++ b/assets/scss/3-base/_base.scss
@@ -20,7 +20,7 @@
     color: $primary-font-color;
     font-family: $font-family;
     font-weight: $regular;
-    line-height: $line-height;
+    line-height: $primary-line-height;
   }
 
   p, h1, h2, h3, h4, h5, h6 {
@@ -30,6 +30,10 @@
   h1, h2, h3, h4, h5, h6 {
     text-align: center;
   } 
+
+  p:first-child, h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
+    margin-top: $margin-top-primary;
+  }
   
   p {
     font-size: $p;
@@ -47,7 +51,7 @@
       display: inline-block;
       color: inherit;
       background-color: $button-color;
-      line-height: 1.5;
+      line-height: $primary-line-height;
       font-size: $button-font-size;
       padding: $button-padding;
       margin: $button-margin;
@@ -78,9 +82,6 @@
       }
   }
 
-
-
-
   hr {
     box-sizing: content-box;
     height: 0;
@@ -100,7 +101,8 @@
     font-size: 1.6rem;
   }
 
-  ol li:not(:last-child), ul li:not(:last-child) {
+  ol li:not(:last-child),
+  ul li:not(:last-child) {
     padding-right: 1rem;
   }
 
