--- a/assets/scss/3-base/_base.scss
+++ b/assets/scss/3-base/_base.scss
@@ -32,7 +32,7 @@
   } 
 
   p:first-child, h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
-    margin-top: $margin-top-primary;
+    padding-top: $padding-top-primary;
   }
   
   p {
